1.19 support + it works on 1.8 again.